--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,7 +2,7 @@ team: Leopards
 
 manager: Luke
 
-coach: Melissa #Oscar
+coach: Lupi #Melissa #Oscar
 
 memebers:
 - Linda
@@ -11,3 +11,4 @@ memebers:
 - Olivia
 - Evie
 - Dongho
+- 
